Added Tailwind And Added BingoCard

--- a/BingoZB/src/app.html
+++ b/BingoZB/src/app.html
@@ -1,11 +1,23 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		 <link href="/src/style.css" rel="stylesheet">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents">%sveltekit.body%</div>		
+			<div id="BingoDiv" class="w-128 h-128 border-5 border-indigo-600 grid grid-cols-3">
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+				<button id="BingoBT" class="">Dobra cos tu bedzie</button>
+			</div>
 	</body>
 </html>
