--- a/BingoZB/src/app.html
+++ b/BingoZB/src/app.html
@@ -1,16 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		 <link href="/src/style.css" rel="stylesheet">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-
-		<script>
-			import increment from './components/incre.svelte';
-		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover" class="grid place-items-center">
-		<div style="display: contents" class="w-256 h-256 place-content-center ">%sveltekit.body%</div>		
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
